--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -1,13 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 219,
-   "id": "2edf647d",
+   "cell_type": "markdown",
+   "id": "060142f3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# !pip install catboost"
+    "# Telnet Attack Models Notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1c42173",
+   "metadata": {},
+   "source": [
+    "## import librairies"
    ]
   },
   {
@@ -39,6 +45,22 @@
     "from sklearn.metrics import (accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, classification_report, balanced_accuracy_score)\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ba351e9",
+   "metadata": {},
+   "source": [
+    "## data exploration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d57167b3",
+   "metadata": {},
+   "source": [
+    "read Dataset csv"
    ]
   },
   {
@@ -288,6 +310,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a6ee929",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 226,
    "id": "8e0565d2",
@@ -417,6 +447,22 @@
    ],
    "source": [
     "print(f\" Final dataset: {len(df_clean)} rows\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fdfda34",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f22f47cb",
+   "metadata": {},
+   "source": [
+    "Split into features and labels"
    ]
   },
   {
@@ -597,19 +643,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c6f33a2",
+   "metadata": {},
+   "source": [
+    "Mapping binary to String flags and Encoding "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": null,
    "id": "d59962dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "flags = {\n",
-    "    'FIN': 0x01,\n",
-    "    'SYN': 0x02,\n",
-    "    'RST': 0x04,\n",
-    "    'PSH': 0x08,\n",
-    "    'ACK': 0x10,\n",
-    "    'URG': 0x20\n",
+    "    'FIN': 0x01, # finish\n",
+    "    'SYN': 0x02, # Synchronize in first handshaking \n",
+    "    'RST': 0x04, # reset\n",
+    "    'PSH': 0x08, # Push\n",
+    "    'ACK': 0x10, # ACk \n",
+    "    'URG': 0x20  # URG\n",
     "}\n",
     "\n",
     "def safe_flag(x, value):\n",
@@ -1355,6 +1409,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "529189e3",
+   "metadata": {},
+   "source": [
+    "## Spliting Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "357dd8c7",
+   "metadata": {},
+   "source": [
+    "Feature Selection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 243,
    "id": "3a2ced48",
@@ -1481,6 +1551,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba3796b1",
+   "metadata": {},
+   "source": [
+    "## Data Balance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 246,
    "id": "11dc5ae2",
@@ -1540,6 +1618,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a695a86",
+   "metadata": {},
+   "source": [
+    "## Scaling "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 249,
    "id": "25566ac2",
@@ -1550,6 +1636,22 @@
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_val_scaled = scaler.transform(X_val) \n",
     "X_test_scaled = scaler.transform(X_test)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1adc8e3",
+   "metadata": {},
+   "source": [
+    "## Models "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "857b48a5",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
    ]
   },
   {
@@ -1646,6 +1748,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2843567",
+   "metadata": {},
+   "source": [
+    "### Decision Tree "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 251,
    "id": "5bb84ab5",
@@ -1739,6 +1849,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65717981",
+   "metadata": {},
+   "source": [
+    "### XGBoost "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 252,
    "id": "f430f15e",
@@ -1823,6 +1941,14 @@
     "print(f\"  Balanced Accuracy: {bal_acc:.4f}\")\n",
     "print(f\"\\nConfusion Matrix:\\n{cm}\")\n",
     "print(f\"\\nClassification Report:\\n{classification_report(y_test, y_pred)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96572cc5",
+   "metadata": {},
+   "source": [
+    "### LightGBM"
    ]
   },
   {
@@ -1970,6 +2096,14 @@
     "print(f\"  Balanced Accuracy: {bal_acc_lgbm:.4f}\")\n",
     "print(f\"\\nConfusion Matrix:\\n{cm_lgbm}\")\n",
     "print(f\"\\nClassification Report:\\n{classification_report(y_test, y_pred_lgbm)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4fe7254",
+   "metadata": {},
+   "source": [
+    "## Models Evaluation"
    ]
   },
   {
@@ -2676,6 +2810,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5dc79a92",
+   "metadata": {},
+   "source": [
+    "### Models Comparsion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 261,
    "id": "29d1e13d",
@@ -2823,6 +2965,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27f2ddaa",
+   "metadata": {},
+   "source": [
+    "## Results Insights"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 263,
    "id": "790530ff",
@@ -2899,6 +3049,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "57b9f752",
+   "metadata": {},
+   "source": [
+    "## Saving Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 264,
    "id": "01c9d196",
@@ -2926,6 +3084,14 @@
     "\n",
     "print(\"Model, scaler, and features saved successfully!\")\n",
     "print(f\"Saved features: {top_features}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5d37af7",
+   "metadata": {},
+   "source": [
+    "## Load and Test"
    ]
   },
   {
