--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -13,7 +13,7 @@
    "id": "b1c42173",
    "metadata": {},
    "source": [
-    "## import librairies"
+    "## Import librairies"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "id": "6ba351e9",
    "metadata": {},
    "source": [
-    "## data exploration"
+    "## Data exploration"
    ]
   },
   {
